--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,8 +1,37 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   background-color: black;
   color: white;
   font-family: 'Times New Roman', Times, serif;
   text-align: center;
+}
+
+.navbar {
+  background-color: white;
+  display: flex;
+  color: black;
+  justify-content: space-between;
+  padding: 1vh;
+}
+
+.heading {
+  text-decoration: none;
+  color: black;
+}
+
+.nav-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.nav-buttons>div {
+  margin-right: 10vh;
+  outline: none;
+  padding: 0.5vh;
 }
 
 .container {
@@ -20,4 +49,34 @@ body {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
+}
+
+.form-container {
+  width: 20%;
+  background-color: white;
+  padding: 2vh;
+  margin: 20vh auto;
+  border: 1px solid yellow;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  color: black;
+}
+
+form>label {
+  text-align: left;
+}
+
+form>input {
+  padding: 0.5vh;
+  outline: none;
+  border: 1px solid black;
+}
+
+form>input,
+label,
+button {
+  margin-top: 1.5vh;
 }
