--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -10,6 +10,11 @@ body {
   text-align: center;
 }
 
+button {
+  padding: 0.5vh;
+  margin: 1vh;
+}
+
 .navbar {
   background-color: white;
   display: flex;
