--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -28,7 +28,7 @@ button {
   color: black;
   justify-content: space-between;
   align-items: center;
-  padding: 2vh;
+  padding: 2vh 5vh;
   width: 70%;
   margin: 3vh auto;
   border-radius: 3vh;
@@ -41,17 +41,48 @@ button {
 
 .nav-buttons {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  background-color: #1d0e01;
+  border-radius: 10vh;
+  width: 50%;
+  padding: 2vh;
 }
 
-.nav-buttons>div {
-  margin-right: 10vh;
+.nav-buttons a {
+  text-decoration: none;
+  color: #000;
+}
+
+.radio {
+  padding: 1vh 2vh;
+  border-radius: 3vh;
+  color: white;
+  cursor: pointer;
+}
+
+.radio:hover {
+  background-color: #bf8a5a;
+  color: black;
+  transition: 0.4s;
+}
+
+select {
+  background-color: initial;
+  border: initial;
   outline: none;
-  padding: 0.5vh;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
 }
 
-.container {
-  margin-top: 10vh;
+option {
+  display: block;
+  color: black;
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  height: 1vh;
 }
 
 .category {
@@ -60,49 +91,20 @@ button {
   justify-content: space-evenly;
 }
 
-.form-container {
-  width: 20%;
-  background-color: white;
-  padding: 2vh;
-  margin: 20vh auto;
-  border: 1px solid yellow;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  color: black;
-}
-
-form>label {
-  text-align: left;
-}
-
-form>input {
-  padding: 0.5vh;
-  outline: none;
-  border: 1px solid black;
-}
-
-form>input,
-label,
-button {
-  margin-top: 1.5vh;
-}
-
-
 .data-container {
-  /* background-color: white; */
   color: black;
   padding: 2vh;
   width: 50%;
   margin: 2vh auto;
   border-radius: 4vh 1vh;
   background-color: #bf8a5a;
-  /* background-blend-mode: difference; */
-  /* z-index: -1; */
   border: 2px solid #1d0e01;
+}
 
+.data-container button {
+  padding: 1vh;
+  margin: 1vh;
+  margin-top: 1.5vh;
 }
 
 .box-1 {
@@ -130,10 +132,104 @@ button {
 }
 
 .box-3 button {
-  padding: 0.8vh;
+  padding: 1.2vh 1.4vh;
   outline: none;
   border: none;
   background-color: black;
   color: white;
   cursor: pointer;
+}
+
+
+
+/* .form-container {
+  width: 20%;
+  background-color: white;
+  padding: 2vh;
+  margin: 20vh auto;
+  border: 1px solid yellow;
+} */
+
+form {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  color: black;
+}
+
+form>label {
+  text-align: left;
+  font-weight: 500;
+}
+
+form>input {
+  padding: 1vh;
+  font-family: "Poppins", sans-serif;
+  outline: none;
+  border: 1px solid black;
+}
+
+form>input,
+label,
+button,
+hr {
+  margin-top: 1.5vh;
+}
+
+.submit-btn {
+  font-weight: 600;
+  cursor: pointer;
+  background-color: #000;
+  color: white;
+  margin-top: 1.8vh;
+}
+
+.container {
+  margin-top: 5vh;
+}
+
+.form-container {
+  width: 25%;
+  background-color: white;
+  margin: 10vh auto;
+  padding: 3.2vh;
+  border-radius: 2vh;
+}
+
+/* .login-container {
+  width: 25%;
+  background-color: white;
+  margin: 10vh auto;
+  padding: 3.2vh;
+  border-radius: 2vh;
+} */
+
+.login-container span {
+  text-align: left;
+  font-size: 14px;
+  margin-top: 1.5vh;
+}
+
+/* .signup-container {
+  width: 25%;
+  background-color: white;
+  margin: 10vh auto;
+  padding: 3.2vh;
+  border-radius: 2vh;
+}
+
+.adding-container {
+  width: 25%;
+  background-color: white;
+  margin: 10vh auto;
+  padding: 3.2vh;
+  border-radius: 2vh;
+} */
+
+textarea {
+  border: 1px solid black;
+  font-family: "Poppins", sans-serif;
+  outline: none;
+  padding: 1vh;
+  margin-top: 1.5vh;
 }
